--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,6 +34,9 @@
             <div class="mt-3 text-center">
               <p>Não tem uma conta? <a href="/register">Registre-se</a></p>
             </div>
+            <a href="/api/auth/google">
+              <button>Entrar com Google</button>
+            </a>
           </div>
         </div>
       </div>
