--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,13 +30,14 @@
               </div>
               <button type="submit" class="btn btn-primary w-100">Entrar</button>
             </form>
-            
+          
+            <a href="/api/auth/google" class="btn btn-light w-100 d-flex align-items-center justify-content-center border mt-2" style="gap: 8px;">
+              <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google" width="22" height="22">
+              <button class="border border-0 btn btn-light">Entrar com Google</button>
+            </a>
             <div class="mt-3 text-center">
               <p>Não tem uma conta? <a href="/register">Registre-se</a></p>
             </div>
-            <a href="/api/auth/google">
-              <button>Entrar com Google</button>
-            </a>
           </div>
         </div>
       </div>
@@ -44,5 +45,6 @@
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  
 </body>
 </html>
